tutorial03/#a-shortcut-render

--- a/manager_project/writers/templates/writers/post_list.html
+++ b/manager_project/writers/templates/writers/post_list.html
@@ -1,4 +1,5 @@
-{% if post_list %}
+<!-- {% if post_list %}
+<h1>post.author</h1>
     <ul>
     {% for post in post_list %}
         <li><a href="/writers/{{ post.author }}/">{{ post.text }}</a></li>
@@ -6,4 +7,5 @@
     </ul>
 {% else %}
     <p>No writers are available.</p>
-{% endif %}
+{% endif %} -->
+test
